--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/img/logo.png" />
+    <link rel="icon" type="image/jpeg" href="/img/logo.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Épopée Visuelle React Website</title>
-    <meta property="og:image" content="/img/logo.png">
+    <meta property="og:image" content="/img/logo.jpeg">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="/img/logo.png">
+    <meta name="twitter:image" content="/img/logo.jpeg">
 </head>
   <body>
     <div id="root"></div>
