perf: optimize image loading with preload and lazy loading
- Add preload for hero image to improve initial load performance
- Replace background images with img tags for better lazy loading
- Set appropriate fetch priorities for images
- Add cache headers for static assets

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/img/logo.png" />
+    <link rel="preload" as="image" href="/img/image_hero.png" fetchpriority="high" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Épopée Visuelle React Website</title>
     <meta property="og:image" content="/img/logo.png">
